--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,26 +1,40 @@
-title: Алексей Стратан, front-end разработчик
-about: 
+title: Алексей Стратан, frontend разработчик
+about:
   header: О себе
   text: Ответственный, инициативный, коммуникабельный. В меру перфекционист. Стремлюсь участвовать в полезных и красивых проектах, работать с профессионалами. Люблю продуманные интерфейсы, хороший код и интересные задачи.
 
 skills-header: Навыки и умения
-skills: 
+skills:
   - JavaScript (ES5, ES6+, TypeScript)
   - Vue.js, Angular (+ ngrx, RxJs), React (+ MobX, Redux), AngularJS, Backbone.js, jQuery
   - SPA, PWA
   - Git, Docker
   - Webpack, Gulp
   - Unix shell
-  - HTML, CSS (SCSS, Less, PostCSS). Sketch.app, Photoshop, Figma
-  - TDD, BDD. Karma, Mocha/Chai
+  - HTML, CSS (SCSS, Less, PostCSS). Sketch, Photoshop, Zeplin
+  - TDD, BDD. Karma, Mocha/Chai, Jest
   - Node.js, Ruby (RoR), Python (Django), PHP (Yii, Symphony, Wordpress)
   - Postgres, MySQL
   - English advanced
 
 jobs-header: Опыт работы
 jobs:
-  - date: Июнь 2017 - настоящее время
-    name: DCA (Data-Centric Alliance), компания про бигдату и rtb рекламу
+  - date: Июль 2018 — Август 2018
+    company: Kaspersky Lab, проект privacyaudit.me
+    position: Fullstack Developer
+    desc:
+      - >
+        Поддержка, развитие и оптимизация фронтенда в классическом многостраничном веб-приложении на Symfony
+        с большим кол-вом легаси на Twig, Backbone.js, jQuery, Bootstrap и тп
+      - >
+        Постепенное переписывание проекта на Vue.js + TypeScript.
+        Как в виде компонентов, встраиваемых в старый код, так и отдельных SPA
+      - Поддержка других проектов на React и React + Redux, эксперименты с React + MobX
+    stack: Vue.js + TypeScript, Backbone.js, jQuery, Webpack, Gulp, React, MobX, Redux, Charts.js
+    leave: Компания лишилась инвестиций и прекратила своя существование
+
+  - date: Июнь 2017 - Июнь 2018
+    company: DCA (Data-Centric Alliance), компания про бигдату и rtb рекламу
     position: Senior Front-end Developer
     desc:
       - >
@@ -30,7 +44,7 @@ jobs:
         Постепенное переписывание проекта на Vue.js + TypeScript.
         Как в виде компонентов, встраиваемых в старый код, так и отдельных SPA
       - Поддержка других проектов на React и React + Redux, эксперименты с React + MobX
-    stack: Vue.js + TypeScript, Backbone.js, JQuery, Webpack, Gulp, React, MobX, Redux, Charts.js
+    stack: Vue.js + TypeScript, Backbone.js, jQuery, Webpack, Gulp, React, MobX, Redux, Charts.js
     leave: Компания лишилась инвестиций и прекратила своя существование
 
   - date: Апрель 2016 - Май 2017
@@ -45,7 +59,7 @@ jobs:
     - Сделал REST API на Node.js (схема в Swagger, архитектура, авторизация, БД, тесты)
     - Сделал на Angular 2 приложение для экспорта данных из стандартных форматов (.cvs, .xls) во внутренний формат
     - Поддержка сайта tillhub.de (Wordpress)
-    stack: TypeScript, Angular, RxJs, ngrx, Sass, IndexedDB, Service Workers, Webpack, Gulp, jQuery, PapaParse, Sketch, Node.js, Express, Knex, Swagger, Mocha, Postgres, Wordpress + PHP
+    stack: TypeScript, Angular 2, RxJs, ngrx, SCSS, IndexedDB, Service Workers, Webpack, Gulp, jQuery, PapaParse, Sketch, Node.js, Express, Knex, Swagger, Mocha, Postgres, Wordpress + PHP
 
   - date: Декабрь 2015 - Февраль 2016
     company: <a href="http://badoo.com">Badoo</a>
@@ -53,7 +67,7 @@ jobs:
     desc:
     - Поддержка сайтов badoo.com и corp.badoo.com в плане верстки
     - Получил опыт работы в большой, хорошо организованной и устоявшейся компании
-    stack: HTML, CSS, JS, PHP, SVG, Sketch
+    stack: HTML, CSS, JS, SVG, Sketch
 
   - date: Июнь 2015 - Ноябрь 2015
     company: Delivia.ru, стартап в сфере логистики
@@ -62,7 +76,7 @@ jobs:
     - Поддерживал и развивал SPA-приложение
     - Проектировал интерфейсы, создавал макеты и прототипы
     - Сделал виджет для встраивания на другие сайты
-    stack: Git, AngularJS, ES6 + Babel, Gulp, Bootstrap, Less, Lodash, d3.js, YandexMaps, JQuery
+    stack: Git, AngularJS, ES6 + Babel, Gulp, Bootstrap, Less, Lodash, d3.js, YandexMaps, jQuery
 
   - date: Октябрь 2014 - Май 2015
     company: Веб-студия CreativeCraft
@@ -71,7 +85,7 @@ jobs:
     - Делал презентационные лендинги
     - Делал интернет-магазины на OpenCart
     - Администрировал linux-сервер
-    stack: Git, Sass, JQuery, БЭМ, Ruby On Rails, PHP
+    stack: Git, Sass, jQuery, БЭМ, Ruby On Rails, PHP
 
   - date: Ноябрь 2013 - сентябрь 2014
     company: VRM Technology
@@ -87,7 +101,7 @@ jobs:
     position: Веб-технолог
     desc:
       - Разрабатывал фронтенд в большом проекте и в большой команде
-    stack: Git, Sass, JS, JQuery, Backbone.js, Yii, PHP
+    stack: Git, Sass, JS, jQuery, Backbone.js, Yii, PHP
 
   - date: Февраль 2011 - Март 2012
     company: Соцсеть vinteresah.ru
@@ -102,17 +116,17 @@ jobs:
     desc:
     - Верстка и сборка сайтов на разных CMS
     - Фронтенд в django-сайтах <a href='http://sgtour.ru'>sgtour.ru</a> и 555auto.ru
-    stack: SVN, Git,  HTML, CSS, JS, JQuery, python + Django, PHP, Wordpress, Drupal, 1t.cms
+    stack: SVN, Git,  HTML, CSS, JS, jQuery, python + Django, PHP, Wordpress, Drupal, 1t.cms
 
   - date: Июнь 2007 - Декабрь 2009
     company: Веб-студия tercio.ru (1t.ru)
     position: HTML-верстальщик
     desc:
     - Сделал множество сайтов (верстка + интеграция с cms)
-    - Активно участвовал в разработке студийной cms (идеи + фронтенд)
+    - Активно участвовал в разработке студийной cms (идеи + верстка)
     - Руководил небольшим отделом верстки
     - Успешно работал в режиме сильной многозадачности
-    stack: SVN, HTML, CSS, JQuery, 1t.cms, .NET
+    stack: SVN, HTML, CSS, jQuery, 1t.cms, .NET
 
   - date: Июль 2006 - Май 2007
     company: Рекламное агентство "Реклама успеха"
@@ -123,5 +137,5 @@ jobs:
     - Cделал несколько сайтов на джумле
 
   - date: Сентябрь 2005 - Декабрь 2006
-    company: МГТУ им. Баумана, факультет Энергомаш, кафедра Экологии (Э-9)
+    company: МГТУ им. Баумана, факультет Энергомашиностроения, кафедра Экологии (Э-9)
     position: студент
